--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -101,7 +101,7 @@ alertmanager:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt-prod
       nginx.ingress.kubernetes.io/whitelist-source-range: ${prometheus_ip_ranges}
-    #   kubernetes.io/tls-acme: 'true'
+      #kubernetes.io/tls-acme: 'true'
 
     ## alertmanager Ingress additional labels
     ##
@@ -657,7 +657,8 @@ server:
     annotations:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt-prod
-    #   kubernetes.io/tls-acme: 'true'
+      nginx.ingress.kubernetes.io/whitelist-source-range: ${prometheus_ip_ranges}
+    #  kubernetes.io/tls-acme: 'true'
 
     ## Prometheus server Ingress additional labels
     ##
