created ip whitelisting for grafana

--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -116,6 +116,7 @@ ingress:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/whitelist-source-range: ${grafana_ip_ranges}
     # kubernetes.io/tls-acme: "true"
   # labels: {}
   # path: /
