added Docker Pipeline plugin

--- a/charts/jenkins/values.yaml
+++ b/charts/jenkins/values.yaml
@@ -153,6 +153,7 @@ Master:
     - rebuild:1.31
     - timestamper:1.11.3
     - sonar:2.11
+    - docker-workflow:1.23
   # Used to approve a list of groovy functions in pipelines used the script-security plugin. Can be viewed under /scriptApproval
   ScriptApproval:
     - "method com.michelin.cio.hudson.plugins.rolestrategy.RoleBasedAuthorizationStrategy addRole"
