--- a/charts/kubernetes-dashboard/values.yaml
+++ b/charts/kubernetes-dashboard/values.yaml
@@ -26,7 +26,7 @@ labels: {}
 
 
 ## Enable possibility to skip login
-enableSkipLogin: true
+enableSkipLogin: false
 
 ## Serve application over HTTP without TLS
 enableInsecureLogin: true
